# Spinor

./: .gitignore  CMakeLists.txt  README.md
Code/kernel/: spinor_kernel_1.cl  spinor_kernel_2.cl
Code/mesh/: spinor.geo  spinor.msh
Code/shader/: cross.frag  cross.geom  cross.vert  voxel_fragment.frag  voxel_geometry_1.geom  voxel_geometry_2.geom
Code/src/: main.cpp
